# Final-Project-Proposal

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  ci_cd.yml
airflow_docker_pipelines/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
airflow_docker_pipelines/Unit_Tests/: test_dag_integrity.py
airflow_docker_pipelines/dags/: DAG_main_pipeline.py  DAG_scrapenubanner_pipeline.py  Scrape_FAQ.py  load_classes_data.py  load_course_catalog_to_snowflake.py  load_program_requirements_data.py  nubanner_utils.py  scrape_course_catalog.py  scrape_graduation_Commencement.py  snowflake_setup.py  store_course_catalog_to_pinecone.py
backend/: Dockerfile  README.md  fastapp.py  pyproject.toml
backend/Unit_Tests/: test_auth.py  test_root.py  test_user_router.py
backend/neu_sa/: README.md  fastapp.py
backend/neu_sa/agents/: agent.py  course_description.py  course_description_agent.py  general_information_agent.py  response_construction.py  sql_agent.py  state.py  task_detection.py  user_course_agent.py
backend/neu_sa/routers/: auth.py  task_router.py  transcript_router.py  user_router.py
backend/neu_sa/utils/: recalculate_eligibility.py
backend/routers/: auth.py  task_detection_agent.py  transcript_router.py  user_router.py
docs/: TestingCases.xlsx  document.md
frontend/: Dockerfile  README.md  app.py  pyproject.toml
frontend/streamlit_pages/: expiration_page.py  login_page.py  register_page.py  update_details_page.py  user_main_page.py
tests/: 1. 1 WS_nubanner_s3_snowflake.py  1. WS_nubanner.py  2.1 WS_cc_s3_pinecone_snowflake.py  3. DB_snowflake_setup.py  5. user_eligibility.py  Scrape_FAQ.py  extract_tables_async.py  faq_content.txt  faq_info.json  graduate_resources.txt  graduation_info.txt  msis_page.py  pyproject.toml  scrape_graduation_Commencement.py  scrape_nubanner.py  scrape_resources.py  test.py
tests/Snowflake/: snowflake_setup.py  user_eligibility.py
tests/Textract/: PDF_textract.py
tests/WS+Storage/: 1.1 WS_nubanner_s3_snowflake.py  1.2 Nubanner_data_s3_to_snowflake.py  2.1 WS_cc_s3_pinecone_snowflake.py  program_requirements_data.py
tests/Webscrapping/: 1. WS_nubanner.py  2. WS_course_catlog.py  Scrape_FAQ.py  scrape_graduation_Commencement.py  scrape_resources.py  scraping_program_requirements.py
tests/agents/: course_description_agent.py  general_information_agent.py  response_construction.py  sql_agent.py  state.py  task_detection.py  task_router_test.py  tavily_agent.py  test.py  test_web_agent.py  user_course_agent.py  web_agent.py
