[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend for NEU-SA"
authors = ["Dharun Karthick <dharun.ramaraj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"