[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["dharun-karthick-ramaraj <dharun.ramaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.26.1"
boto3 = "^1.35.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
